--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.17.1",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3"
   }
 }
